--- a/orders-service/src/main/resources/application.properties
+++ b/orders-service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=orders
+
+server.port=9090
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+spring.config.import=optional:configserver:http://localhost:8888
+
+management.endpoints.web.exposure.include=*
