--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-spring.application.name=app
+spring.application.name=product-service
 
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
